# canvas-ledger

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.specify/memory/: constitution.md
cli/reference/: index.html
concepts/: index.html
data-model/: index.html
mkdocs/docs/: concepts.md  data-model.md  index.md  quickstart.md
mkdocs/docs/cli/: reference.md
mkdocs/docs/workflows/: mid-semester.md  retrospective.md  semester-start.md
quickstart/: index.html
search/: search_index.json
specs/000-canvas-ledger-core/: spec.md  tasks.md
src/cl/annotations/: manager.py  models.py
src/cl/canvas/: client.py
src/cl/cli/: annotate_cmd.py  config_cmd.py  db_cmd.py  export_cmd.py  ingest_cmd.py  main.py  output.py  query_cmd.py
src/cl/ledger/: ingest.py  models.py  queries.py  store.py
src/cl/migrations/versions/: 004_deep_ingestion_tables.py  005_history_tracking.py  006_course_alias_tables.py
tests/integration/: test_db_setup.py  test_drift_tracking.py
tests/unit/: test_aliases.py  test_canvas_client.py  test_deep_ingest.py  test_grade_queries.py
workflows/mid-semester/: index.html
workflows/retrospective/: index.html
workflows/semester-start/: index.html
