[project]
name = "cl"
version = "0.1.0"
description = "A local, queryable ledger of Canvas LMS metadata for historical analysis"
readme = "README.md"
authors = [
    { name = "Dan O'Leary", email = "oleary.dj@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "canvasapi>=3.3.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "radon>=6.0.0",
    "bandit>=1.9.2",
    "vulture>=2.14",
    "interrogate>=1.7.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-typer2>=0.1.6",
]

[project.scripts]
cl = "cl.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (typer uses this)
]

[tool.ruff.lint.isort]
known-first-party = ["cl"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"
plugins = []

[[tool.mypy.overrides]]
module = [
    "canvasapi.*",
    "alembic.*",
]
ignore_missing_imports = true
